tests/ui/pattern/issue-80186-mut-binding-help-suggestion.stderr
error: `mut` must be attached to each individual binding
  --> $DIR/issue-80186-mut-binding-help-suggestion.rs:5:9
   |
LL |     let mut &x = &0;
   |         ^^^^^^ help: add `mut` to each binding: `&(mut x)`
   |
   = note: `mut` may be followed by `variable` and `variable @ pattern`

error: aborting due to previous error

